[gd_scene load_steps=2 format=3 uid="uid://by5ifcv8fa5pa"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_nxeuu"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxeuu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameOver" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER!"
horizontal_alignment = 1

[node name="ScoreContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2

[node name="scoreLabel" type="Label" parent="MarginContainer/VBoxContainer/ScoreContainer/HBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="score" type="Label" parent="MarginContainer/VBoxContainer/ScoreContainer/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="StartNewGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start New Game"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartNewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
